<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/idBtnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="277dp"
        android:text="@string/btnMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnLista"
        app:layout_constraintStart_toStartOf="@+id/idBtnMain"
        app:layout_constraintTop_toBottomOf="@+id/idBtnMain" />

    <Button
        android:id="@+id/idBtnAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:text="@string/btnAPI"
        app:layout_constraintStart_toStartOf="@+id/idBtnLista"
        app:layout_constraintTop_toBottomOf="@+id/idBtnLista" />

    <Button
        android:id="@+id/idBtnImagini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnImagini"
        app:layout_constraintBottom_toTopOf="@+id/idBtnPisici"
        app:layout_constraintStart_toStartOf="@+id/idBtnPisici" />

    <Button
        android:id="@+id/idBtnPisici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="@string/btnPisiciFav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnAPI" />
</androidx.constraintlayout.widget.ConstraintLayout>